Closed
Bug 230173
Opened 22 years ago
Closed 22 years ago
Mozilla use 15 point size font for characters with style {font-size:14px;}
Categories
(Core Graveyard :: GFX: Gtk, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: Ervin.Yan, Assigned: blizzard)
References
Details
Attachments
(1 file)
|
1.62 KB,
patch
|
blizzard
:
review+
blizzard
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:1.4) Gecko/20031229
Build Identifier: Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:1.4) Gecko/20031229
Mozilla use 15 point size font for characters with style {font-size:14px;}
for example, visit webpage http://news.sina.com.cn
you will see some lines are wrapped. that is because mozilla use 15 point size
font for the Chinese characters with style {font-size:14px;}
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Expected Results:
should use 14 point size font for style {font-size:14px;}
If use PRUint16 type for mPointSize, for 14px style characters, mPointSize
became 11, while convert back to the true font size, it become 15 point size.
but if use float type for mPointSize, for 14px style characters, mPointSize
became 10.5, and remain 14 point size when convert back to the true font size.
| Assignee | ||
Comment 2•22 years ago
|
||
Comment on attachment 138463 [details] [diff] [review]
use float type for mPointSize
r=blizzard
This seems pretty reasonable.
Attachment #138463 -
Flags: review+
| Assignee | ||
Updated•22 years ago
|
| Assignee | ||
Updated•22 years ago
|
Attachment #138463 -
Flags: superreview+
Comment 4•22 years ago
|
||
patch checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 5•22 years ago
|
||
Viewing this site with the following font settings
Sans-Serif: Verdana: 13 point
Monospace: LucidaTypewriter 12 point
on a clobber build of MozillaFirebird on Redhat 9 with GTK2
http://forums.mozillazine.org/viewforum.php?f=32
I see a difference in rendering in the hyperlink of the username in the "Last
post" column. It seems much smaller than before
This also shows up in the Slashdot boxes (on the right hand side) which
aggregate RSS feeds from other sites.
If I revert the changes as suggested by bonsai, then the rendering occurs as before
| Assignee | ||
Comment 6•22 years ago
|
||
I suspect this is going to result in some different rendering. Whether or not
it's also incorrect is another issue.
Comment 7•22 years ago
|
||
tor on irc said that post-checkin he felt the fonts bigger, I feel the opposite
it maybe that whilst tor mentions he has a minimum font size, my setting for
minimum font size is "None"
Comment 8•22 years ago
|
||
Using an 2004-01-14 XFT/GTK2 build, I'm seeing smaller font rendering as
compared to an 2004-01-08 XFT/GTK2 build. I'm seeing this not only on the site
that Yusuf mentioned, but on pretty much any site (including cnn.com, mozilla.org).
The fonts just appear generally smaller across the board. I tested by opening
the above two copies of Firebird using different profiles and browsing the same
websites. When switching between windows, the 2003-01-14 build had obviously
smaller fonts.
I don't know if this is corrent or incorrect rendering, but this is what I'm
seeing. FWIW, I'm using Fedora Core 1. Maybe we should reopen this to examine
carefully what's going on.
Updated•22 years ago
|
Flags: blocking1.7a?
Comment 9•22 years ago
|
||
I think this increased pageload time a bit for xft:
http://axolotl.mozilla.org/graph/query.cgi?testname=pageload&tbox=redwood&autoscale=1&days=7&avg=1&showpoint=2004:01:15:03:07:23,993
shows a pageload spike about the time this went in that isn't present on any
non-xft tinderbox.
Comment 10•22 years ago
|
||
See also bug 197037 comment 29: Assuming that using pixels instead of points
would let us go back to integer maths, that should speed this up too, right?
| Reporter | ||
Comment 11•22 years ago
|
||
I think it is OK to add the following settings in unix.js,
pref("font.min-size.variable.x-western", 10);
pref("font.min-size.fixed.x-western", 10);
so that Mozilla show English characters OK for small font size.
Updated•22 years ago
|
Flags: blocking1.7a?
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•