Bug 230173 Mozilla use 15 point size font for characters with style {font-size:14px;} r & sr = blizzard p = ervin.yan@sun.com